2002-08-29  Roland McGrath  <roland@redhat.com>

	* sysdeps/mach/_strerror.c (__strerror_r): Add libc_hidden_def.

	* sysdeps/mach/hurd/pwrite64.c: No libc_hidden_def (__libc_pwrite64).

	* sysdeps/mach/hurd/dl-sysdep.c (__GI_abort): Define alias for abort.

	* include/assert.h (__assert_perror_fail): Declare it, do hidden_proto.
	* assert/assert-perr.c: Add libc_hidden_def.
	* elf/dl-minimal.c [! NDEBUG] (__assert_perror_fail): New function.

	* sysdeps/gnu/errlist-compat.awk: Don't fail if there are no versions
	found at all.
	* sysdeps/gnu/Versions: File removed.  Moved all #errlist-compat
	sys_errlist stuff to ...
	* sysdeps/unix/sysv/linux/Versions: ... here.

	* mach/mach.h: Include <features.h>.

	* elf/dl-runtime.c (IN_DL_RUNTIME): Define this macro first thing.
	* sysdeps/i386/dl-machine.h: Only declare fixup, profile_fixup and
	define ELF_MACHINE_RUNTIME_TRAMPOLINE under #ifdef IN_DL_RUNTIME.

	* sysdeps/generic/readelflib.c (process_elf_file): Fix typo.

	* iconv/gconv_int.h: Include <stdlib.h> for alloca decl.
	(norm_add_slashes): alloca -> __alloca

2002-08-29  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/vfprintf.c (vfprintf): Add builtin_expect for
	string_malloced, it is unlikely to be set.
	Only call free with non-NULL workspace.
	* sysdeps/sparc/sparc32/sparcv9/Makefile (sysdep-CFLAGS): Use
	-mcpu=ultrasparc, not only tune for it.
	(ASFLAGS*): Set unconditionally.

	* sysdeps/generic/readelflib.c (process_elf_file): Make LOADADDR
	ElfW(Addr).  Don't mask upper 32-bits and lower 12 bits off from
	p_vaddr/p_offset when computing LOADADDR.

2002-08-29  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.2.92.

	* time/Makefile (tst-ftime_l-ENV): New variable.

	* iconvdata/ibm870.c: All bytes are now used, no holes anymore.

	* localedata/charmaps/IBM870: Add correct mapping for <U017E>,
	<U017A>, <U017D> and <U0179>. Add missing mappings.
	Patch by Antonin Kopecky <akopecky@tajmac-zps.cz>.
